# Resume-Fit-GPT

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
config/: config.py
models/: job_post.py
services/: langchain_helpers.py  resume_improver.py
src/resumeGPT/: __init__.py
src/resumeGPT/config/: __init__.py  config.py
src/resumeGPT/models/: __init__.py  job_post.py  resume.py
src/resumeGPT/pdf_generation/: __init__.py  resume_pdf_generator.py  resume_pdf_styles.py
src/resumeGPT/prompts/: __init__.py  extractor_descriptions.yaml  prompts.py  prompts.yaml
src/resumeGPT/services/: __init__.py  background_runner.py  langchain_helpers.py  resume_improver.py
src/resumeGPT/utils/: __init__.py  file_handler.py  pdf_generator.py  resume_format_checker.py  yaml_handler.py
